# MSCS-699-HealthTrackerApp

./: .env.example  API-Documentation.json  DBSchema.sql  HealthTrackerApp.postman_collection.json  README-Phase2.md  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 32fadc579546_clinical_data_tables.py  605af560fc9e_core_identity_tables.py
app/: .gitignore  auth.py  config.py  database.py  main.py  models.py  schemas.py  services.py
app/routers/: activity.py  alert_thresholds.py  alerts.py  auth.py  patients.py  risk_scores.py  vital_signs.py
app/tests/: conftest.py  test_activity_api.py  test_audit_log.py  test_auth.py  test_models.py  test_patients_api.py  test_vital_signs_api.py
scripts/: create_database.py  performance_check.py
