[project]
name = "MSCS-699-HealthTrackerApp"
description = "MSCS-699 capstone project - HealthTrackerApp"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.139.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
